test_regress/t/t_fuzz_eqne_bad.out
%Error: t/t_fuzz_eqne_bad.v:12:19: Comparison requires matching data types
                                 : ... note: In instance 't'
                                 : ... LHS: 'logic$[0:-1]', RHS: 'logic'
   12 |    initial c = (a != &b);
      |                   ^~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
